# kicad_cli

./: Cargo.toml  Dockerfile  readme.md
config/: pcbnew
src/: eeschema.rs  main.rs  pcbnew.rs  xvfb.rs
src/gui/: drc.rs  erc.rs  mod.rs
