[package]
name = "kicad_cli"
version = "0.1.0"
authors = ["Pierre Chevalier <pierrechevalier83@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autopilot = "0.4.0"
log = "0.4.11"
pretty_env_logger = "0.4.0"
rand = "0.8.1"
regex = "1.4.3"
structopt = "0.3.21"
xdotool = "0.0.2"
